--- a/src/App/components/ui/MemeThumbnail/MemeThumbnail.module.css
+++ b/src/App/components/ui/MemeThumbnail/MemeThumbnail.module.css
@@ -1,1 +1,12 @@
-.MemeThumbnail {}
+.MemeThumbnail {
+    display:flex;
+    height:90vh;
+    overflow-y: auto;
+    justify-content: space-evenly;
+    padding-top: 15px;
+    flex-wrap: wrap;
+}
+.MemeThumbnail>*{
+    width:24vw;
+    height: 24vh;
+}
