--- a/src/App/components/pdf/PDFThumbnail/PDFThumbnail.module.css
+++ b/src/App/components/pdf/PDFThumbnail/PDFThumbnail.module.css
@@ -1,1 +1,8 @@
-.PDFMemeThumbnail {}
+.PDFMemeThumbnail {
+  display: flex;
+  height: 90vh;
+  overflow-y: auto;
+  justify-content: space-evenly;
+  padding-top: 15px;
+  flex-wrap: wrap;
+}
